syntax = "proto3";
package verana.tr.v1;

import "amino/amino.proto";
import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "verana/tr/v1/params.proto";
import "verana/tr/v1/types.proto";
import "cosmos_proto/cosmos.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/verana-labs/verana-blockchain/x/trustregistry/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/tr/v1/params";
  }
  // GetTrustRegistry returns the trust registry information.
  rpc GetTrustRegistry(QueryGetTrustRegistryRequest) returns (QueryGetTrustRegistryResponse) {
    option (google.api.http).get = "/tr/v1/get/{tr_id}";
  }

  // ListTrustRegistries returns a list of Trust Registries
  rpc ListTrustRegistries(QueryListTrustRegistriesRequest) returns (QueryListTrustRegistriesResponse) {
    option (google.api.http).get = "/tr/v1/list";
  }
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [
    (gogoproto.nullable) = false,
    (amino.dont_omitempty) = true
  ];
}

// QueryGetTrustRegistryRequest is the request type for the Query/GetTrustRegistry RPC method.
message QueryGetTrustRegistryRequest {
  uint64 tr_id = 1;  // Changed from string did to uint64 tr_id
  bool active_gf_only = 2;
  string preferred_language = 3;
}

// QueryGetTrustRegistryResponse is the response type for the Query/GetTrustRegistry RPC method.
message QueryGetTrustRegistryResponse {
  TrustRegistryWithVersions trust_registry = 1;
}

// QueryListTrustRegistriesRequest is the request type for the Query/ListTrustRegistries RPC method.
message QueryListTrustRegistriesRequest {
  string controller = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];  // Added controller field
  google.protobuf.Timestamp modified_after = 2 [(gogoproto.stdtime) = true, (gogoproto.nullable) = true];
  bool active_gf_only = 3;
  string preferred_language = 4;
  uint32 response_max_size = 5;
}

// QueryListTrustRegistriesResponse is the response type for the Query/ListTrustRegistries RPC method.
message QueryListTrustRegistriesResponse {
  repeated TrustRegistryWithVersions trust_registries = 1 [(gogoproto.nullable) = false];
}