syntax = "proto3";
package veranablockchain.cspermission;

import "amino/amino.proto";
import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";
import "cosmos_proto/cosmos.proto";

option go_package = "github.com/verana-labs/verana-blockchain/x/cspermission/types";

enum CredentialSchemaPermType {
  UNSPECIFIED = 0;
  ISSUER = 1;
  VERIFIER = 2;
  ISSUER_GRANTOR = 3;
  VERIFIER_GRANTOR = 4;
  TRUST_REGISTRY = 5;
  HOLDER = 6;
}

message CredentialSchemaPerm {
  uint64 id = 1;
  uint64 schema_id = 2;
  CredentialSchemaPermType csp_type = 3;
  string did = 4;
  string grantee = 5 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  // Required fields are non-nullable
  google.protobuf.Timestamp created = 6 [(gogoproto.nullable) = false, (gogoproto.stdtime) = true];
  string created_by = 7 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  google.protobuf.Timestamp effective_from = 8 [(gogoproto.nullable) = false, (gogoproto.stdtime) = true];
  // Optional fields are nullable
  google.protobuf.Timestamp effective_until = 9 [(gogoproto.nullable) = true, (gogoproto.stdtime) = true];
  uint64 validation_id = 10 [(gogoproto.nullable) = true];
  uint64 validation_fees = 11;
  uint64 issuance_fees = 12;
  uint64 verification_fees = 13;
  int64 deposit = 14;
  // Optional state fields are nullable
  google.protobuf.Timestamp revoked = 15 [(gogoproto.nullable) = true, (gogoproto.stdtime) = true];
  string revoked_by = 16 [(cosmos_proto.scalar) = "cosmos.AddressString", (gogoproto.nullable) = true];
  google.protobuf.Timestamp terminated = 17 [(gogoproto.nullable) = true, (gogoproto.stdtime) = true];
  string terminated_by = 18 [(cosmos_proto.scalar) = "cosmos.AddressString", (gogoproto.nullable) = true];
  string country = 19 [(gogoproto.nullable) = true];
}