syntax = "proto3";
package veranablockchain.trustregistry;

import "amino/amino.proto";
import "gogoproto/gogo.proto";

option go_package = "github.com/verana-labs/verana-blockchain/x/trustregistry/types";

// Params defines the parameters for the module.
message Params {
  option (amino.name) = "veranablockchain/x/trustregistry/Params";
  option (gogoproto.equal) = true;

  uint64 trust_registry_trust_deposit = 1;
  uint64 trust_unit_price = 2;
}